# eviebot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: avatar.rs  gay.rs  mod.rs  purge.rs
