[package]
name = "eviebot"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0", features = ["cache", "http"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
rand = "0.8.5"
